--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Shower Presentation Engine</title>
+    <title>Тимлидам про техдол</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="node_modules/@shower/ribbon/styles/styles.css">
@@ -9,202 +9,110 @@
         .shower {
             --slide-ratio: calc(16 / 9);
         }
+
+        .slide .shout.shout-medium {
+            font-size: 50px;
+        }
+
+        .slide::after,
+        .slide.off::after {
+            visibility: hidden !important;
+        }
+
+        h2 mark.important {
+            background: var(--color-red);
+            color: #fff;
+            font-size: 0.7em;
+        }
     </style>
 </head>
 <body class="shower list">
 
-    <header class="caption">
-        <h1>Shower Presentation Engine</h1>
-        <p>Yours Truly, Famous Inc.</p>
-    </header>
-
-    <section class="slide" id="cover">
-        <h2>Shower Presentation Engine</h2>
-        <p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-        <figure>
-            <img class="cover" src="pictures/cover.jpg" alt="Hands on the orange typewriter in a park">
-            <figcaption class="copyright right white">
-                <a href="http://fiftyfootshadows.net/">© John Carey</a>
-            </figcaption>
-        </figure>
+    <section class="slide off" id="cover">
+        <h2 class="shout">Тимлидам про техдолг</h2>
+        <img class="cover width height" src="pictures/cover.jpg">
         <style>
             #cover h2 {
-                margin: 30px 0 0;
                 color: white;
                 text-align: center;
                 font-size: 70px;
             }
-
-            #cover p {
-                margin: 10px 0 0;
-                text-align: center;
-                color: white;
-                font-style: italic;
-                font-size: 20px;
-            }
-
-            #cover p a {
-                color: white;
-            }
         </style>
     </section>
 
     <section class="slide">
-        <h2>Shower key features</h2>
+        <h2 class="shout shout-medium">Команда может тратить<br><mark class="important">25%</mark> времени на техдолг и баги</h2>
+    </section>
+
+    <section class="slide">
+        <h2>Что входит в 25% времени?</h2>
         <ol>
-            <li>Built on HTML, CSS and JavaScript</li>
-            <li>Works in all modern browsers</li>
-            <li>Themes are separated from engine</li>
-            <li>Fully keyboard accessible</li>
-            <li>Printable to PDF</li>
+            <li>Баги из проекта BUGS</li>
+            <li>Рефакторинг. Например: переделать user_requisites</li>
+            <li>Фичи для разработки. Например: TimeMock, Client Side Config, php-cs-fixer</li>
+            <li>Метрики, логи, документация</li>
+            <li>Прочее, кроме продуктовых фич</li>
         </ol>
-        <p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
     </section>
 
     <section class="slide">
-        <h2>Plain text on your slides</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
+        <h2>Техдолгом надо заниматься регулярно</h2>
+        <p>Не использованное время не сгорает, а переходит на следующую неделю (в разумных пределах).</p>
+        <p><strong>Пример</strong><br>Неделю делали только продуктовые фичи, следующую неделю 50% времени тратим на баги и рефакторинг. До такого лучше не доводить.</p>
     </section>
 
     <section class="slide">
-        <h2>Two columns if you like</h2>
-        <div class="columns two">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+        <h2>Бэклог техдолга</h2>
+        <ul>
+            <li>Желательно, чтобы он был у каждой команды</li>
+            <li class="next">Для бэклога можно завести приватный тег</li>
+            <li class="next">Не смешивать с продуктовыми задачами</li>
+            <li class="next">Бэклог может видеть весь сквод</li>
+            <li class="next">Поддерживать актуальность</li>
+            <li class="next">Управлять приоритетами</li>
+        </ul>
+    </section>
+
+    <section class="slide">
+        <img class="cover height" src="pictures/backlog.png" style="height: 90%">
+    </section>
+
+    <section class="slide">
+        <h2>Откуда брать задачи?</h2>
+        <ul>
+            <li class="next">Заметил проблему в коде — поставь задачу</li>
+            <li class="next">Приучай команду ставить задачи</li>
+            <li class="next">Взять у другой команды разработки</li>
+        </ul>
+        <div class="next">
+            <h2>Куда положить задачи?</h2>
+            <p>В бэклог техдолга твоей или другой команды.</p>
         </div>
     </section>
 
     <section class="slide">
-        <h2>All kind of lists</h2>
+        <h2>Как отдать техдолг в другую команду?</h2>
+        <p>Неси такие задачи напрямую тимлиду.</p>
+        <p>
+            Не пытайся делать это через продактов и спринты.<br>
+            Не надо продавать техдолг менеджерам.
+        </p>
+    </section>
+
+    <section class="slide">
+        <h2>Ещё раз</h2>
         <ol>
-            <li>Simple lists are marked with bullets</li>
-            <li>Ordered lists begin with a number</li>
-            <li>You can even nest lists one inside another
-                <ul>
-                    <li>Or mix their types</li>
-                    <li>But do not go too far</li>
-                    <li>Otherwise audience will be bored</li>
-                </ul>
-            </li>
-            <li>Look, seven rows exactly!</li>
+            <li class="next">У команды есть 25% времени на техдолг и баги</li>
+            <li class="next">Техдолгом надо заниматься регулярно</li>
+            <li class="next">Отдавай техдолг в другие команды</li>
+            <li class="next">Бери техдолг от других команд</li>
+            <li class="next">Не надо продавать техдолг менеджерам</li>
         </ol>
     </section>
-
-    <section class="slide">
-        <h2>Serious citations</h2>
-        <figure>
-            <blockquote>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-            </blockquote>
-            <figcaption>Marcus Tullius Cicero</figcaption>
-        </figure>
-    </section>
-
-    <section class="slide">
-        <h2>Code samples</h2>
-        <pre>
-            <code>&lt;!DOCTYPE html&gt;</code>
-            <code class="mark">&lt;html lang="en"&gt;</code>
-            <code><mark>&lt;head&gt;</mark> <span class="comment">&lt;!--Comment--&gt;</span></code>
-            <code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-            <code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-            <code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-            <code><mark>&lt;/head&gt;</mark></code>
-        </pre>
-    </section>
-
-    <section class="slide">
-        <h2>Even tables</h2>
-        <table>
-        <tr>
-            <th scope="col">Locavore</th>
-            <th>Umami</th>
-            <th>Helvetica</th>
-            <th>Vegan</th>
-        </tr>
-        <tr>
-            <th scope="row">Fingerstache</th>
-            <td>Kale</td>
-            <td>Chips</td>
-            <td>Keytar</td>
-        </tr>
-        <tr>
-            <th scope="row">Sriracha</th>
-            <td>Gluten-free</td>
-            <td>Ennui</td>
-            <td>Keffiyeh</td>
-        </tr>
-        <tr>
-            <th scope="row">Thundercats</th>
-            <td>Jean</td>
-            <td>Shorts</td>
-            <td>Biodiesel</td>
-        </tr>
-        <tr>
-            <th scope="row">Terry</th>
-            <td>Richardson</td>
-            <td>Swag</td>
-            <td>Blog</td>
-        </tr>
-        </table>
-        <p>It’s good to have information organized.</p>
-    </section>
-
-    <section class="slide" id="picture">
-        <h2>Pictures</h2>
-        <figure>
-            <img class="cover" src="pictures/picture.jpg" alt="Orange typewriter on a wooden table close-up">
-            <figcaption class="copyright right white">
-                <a href="http://fiftyfootshadows.net/">© John Carey</a>
-            </figcaption>
-        </figure>
-        <style>
-            #picture h2 {
-                color: white;
-            }
-        </style>
-    </section>
-
-    <section class="slide">
-        <h2 class="shout shrink">You can even shout this way</h2>
-    </section>
-
-    <section class="slide">
-        <h2>Inner navigation</h2>
-        <ol>
-            <li>Lets you reveal list items one by one</li>
-            <li class="next">To keep some key points</li>
-            <li class="next">In secret from audience</li>
-            <li class="next">But it will work only once</li>
-            <li class="next">Nobody wants to see the same joke twice</li>
-        </ol>
-    </section>
-
-    <section class="slide" id="see-more">
-        <h2 class="shout">
-            <img src="pictures/logo.svg" alt="Shower logo">
-            <a href="https://github.com/shower/shower">See more on GitHub</a>
-        </h2>
-        <style>
-            #see-more h2 {
-                font-size: 100px
-            }
-
-            #see-more img {
-                width: 0.72em;
-                height: 0.72em;
-            }
-        </style>
-    </section>
-
-    <footer class="badge">
-        <a href="https://github.com/shower/shower">Fork me on GitHub</a>
-    </footer>
 
     <div class="progress"></div>
 
     <script src="node_modules/shower-core/shower.min.js"></script>
-    <!-- Copyright © 3000 Yours Truly, Famous Inc. -->
 
 </body>
 </html>
