Убрал примеры из документации

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     </section>
 
     <section class="slide">
-        <h2 class="shout shout-medium">Команда может тратить<br><mark class="important">25%</mark> времени на техдолг и баги</h2>
+        <h2 class="shout shout-medium">Команда может тратить<br><mark class="important">25%</mark> времени на&nbsp;техдолг и баги</h2>
     </section>
 
     <section class="slide">
         <h2>Что входит в 25% времени?</h2>
         <ol>
             <li>Баги из проекта BUGS</li>
-            <li>Рефакторинг. Например: переделать user_requisites</li>
-            <li>Фичи для разработки. Например: TimeMock, Client Side Config, php-cs-fixer</li>
+            <li>Рефакторинг</li>
+            <li>Фичи для разработки</li>
             <li>Метрики, логи, документация</li>
             <li>Прочее, кроме продуктовых фич</li>
         </ol>
@@ -57,8 +57,8 @@
 
     <section class="slide">
         <h2>Техдолгом надо заниматься регулярно</h2>
-        <p>Не использованное время не сгорает, а переходит на следующую неделю (в разумных пределах).</p>
-        <p><strong>Пример</strong><br>Неделю делали только продуктовые фичи, следующую неделю 50% времени тратим на баги и рефакторинг. До такого лучше не доводить.</p>
+        <p>Неиспользованное время не сгорает, а переходит на следующую неделю (в разумных пределах).</p>
+        <p><strong>Пример</strong>. Неделю делали только продуктовые фичи, следующую неделю 50% времени тратим на&nbsp;баги и&nbsp;рефакторинг. До&nbsp;такого лучше не&nbsp;доводить.</p>
     </section>
 
     <section class="slide">
