Поправил текст про бэклог

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <ul>
             <li>Желательно, чтобы он был у каждой команды</li>
             <li class="next">Для бэклога можно завести приватный тег</li>
-            <li class="next">Не смешивать с продуктовыми задачами</li>
+            <li class="next">Не смешивай техдолг с продуктовыми задачами</li>
             <li class="next">Бэклог может видеть весь сквод</li>
-            <li class="next">Поддерживать актуальность</li>
-            <li class="next">Управлять приоритетами</li>
+            <li class="next">Поддерживай актуальность</li>
+            <li class="next">Следи за приоритетами</li>
         </ul>
     </section>
 
@@ -81,7 +81,7 @@
         <h2>Откуда брать задачи?</h2>
         <ul>
             <li class="next">Заметил проблему в коде — поставь задачу</li>
-            <li class="next">Приучай команду ставить задачи</li>
+            <li class="next">Приучай свою команду ставить задачи</li>
             <li class="next">Взять у другой команды разработки</li>
         </ul>
         <div class="next">
